terraform/instance.tf
resource "aws_instance" "app_and_web_server" {
  ami                         = "ami-05e411cf591b5c9f6"
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public_subnet.id
  key_name                    = "key pairr"
  associate_public_ip_address = true
}

resource "aws_eip" "example_eip" {
  instance = aws_instance.app_and_web_server.id
  vpc      = true

  tags = {
    Name = "ExampleEIP"
  }
}
